add and displaying cart items

--- a/BingoWebApp/BingoWebApp/Views/Shared/_Layout.cshtml
+++ b/BingoWebApp/BingoWebApp/Views/Shared/_Layout.cshtml
@@ -7,12 +7,12 @@
    <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
      <link rel="stylesheet" href="~/BingoWebApp.styles.css" asp-append-version="true" />-->
-    <link rel="stylesheet" href="~/css/Index.css" />
+  <!--  <link rel="stylesheet" href="~/css/Index.css" />-->
    <!-- <link rel="stylesheet" type="text/css" href="~/css/DisplayProducts.css">-->
 </head>
 <body>
     <partial name="_header"/>
-  @await Component.InvokeAsync("Products");
+    @await Component.InvokeAsync("Products");
        
         <main role="main" class="pb-3">
             @RenderBody()
