--- a/BingoWebApp/BingoWebApp/wwwroot/css/Index.css
+++ b/BingoWebApp/BingoWebApp/wwwroot/css/Index.css
@@ -26,7 +26,7 @@
     display: flex;
 }
 
-    .search-bar input {
+    .search-bar .search-bar-input {
         padding: 10px;
         border: none;
         border-radius: 4px;
