--- a/BingoWebApp/BingoWebApp/Views/Shared/_Layout.cshtml
+++ b/BingoWebApp/BingoWebApp/Views/Shared/_Layout.cshtml
@@ -9,9 +9,11 @@
      <link rel="stylesheet" href="~/BingoWebApp.styles.css" asp-append-version="true" />-->
   <!--  <link rel="stylesheet" href="~/css/Index.css" />-->
    <!-- <link rel="stylesheet" type="text/css" href="~/css/DisplayProducts.css">-->
+   <script src="~/js/Index.js"></script>
 </head>
 <body>
     <partial name="_header"/>
+
     @await Component.InvokeAsync("Products");
        
         <main role="main" class="pb-3">
