--- a/BingoWebApp/BingoWebApp/Views/Shared/_header.cshtml
+++ b/BingoWebApp/BingoWebApp/Views/Shared/_header.cshtml
@@ -7,14 +7,19 @@
 
 }
 <link rel="stylesheet" href="~/css/Index.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+<script src="~/js/Index.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <nav class="navbar">
     <div class="logo">
         <h1>Bingo</h1>
     </div>
+    <form asp-controller="product" asp-action="GetSearchProducts" method="post">
     <div class="search-bar">
-        <input class="search-bar-input" type="text" placeholder="Search for groceries...">
-        <button class="search-button">Search</button>
+        <input id="searchTerm" class="search-bar-input" type="text" placeholder="Search for groceries...">
+        <button  class="search-button" onclick="submitSearchForm()">Search</button>
     </div>
+    </form>
     <div class="user-actions">
         <button class="cart-button" onclick="location.href='@Url.Action("GetCartItems", "Product")'">My Cart</button>
         @if(userId.HasValue)
@@ -25,5 +30,48 @@
         {
         <button class="login-button" onclick="location.href='@Url.Action("Login", "User")'">Login</button>
         }
+    
+    <i class="fas fa-ellipsis-v" onclick="toggleSideMenu()"></i>
+        <div class="side-menu">
+            <button onclick="location.href='@Url.Action("ProfileDetails", "User", new { UserId = userId })'">Profile</button>
+            <button onclick="location.href='@Url.Action("GetOrders", "Product")'">Orders</button>
+            <button onclick="location.href='@Url.Action("Privacy", "Home")'">Reviews</button>
+            <button onclick="location.href='@Url.Action("About", "Home")'">About</button>
+        </div>
     </div>
 </nav>
+
+<style>
+    .side-menu {
+        display: none;
+        position: absolute;
+        top: 50px; /* Adjust as needed */
+        right: 0;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 10px;
+        z-index: 1;
+    }
+
+    .side-menu button {
+        display: block;
+        width: 100%;
+        padding: 8px;
+        text-align: left;
+        border: none;
+        background-color: green;
+        cursor: pointer;
+        margin-bottom: 8px; /* Add spacing between menu items */
+    }
+
+    .user-actions i {
+        cursor: pointer;
+        font:x-large;
+    }
+
+    /* Show/hide the side menu */
+    .show-menu .side-menu {
+        display: block;
+    }
+</style>
