--- a/BingoWebApp/BingoWebApp/Views/User/Login.cshtml
+++ b/BingoWebApp/BingoWebApp/Views/User/Login.cshtml
@@ -36,7 +36,7 @@
             <div class="form-group">
                 <input asp-for="Username" type="text" id="username" name="username" placeholder="Username" >
                 <span asp-validation-for="Username" class="text-danger"></span>
-            </div class="form-group">
+            </div>
             <div class=form-group>
                 <input asp-for="Password" type="password" id="password" name="password" placeholder="Password">
                 <span asp-validation-for="Password" class="text-danger"></span>
