--- a/BingoWebApp/BingoWebApp/wwwroot/css/Create.css
+++ b/BingoWebApp/BingoWebApp/wwwroot/css/Create.css
@@ -18,7 +18,9 @@
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
-
+.form-group {
+    margin-bottom: 20px; /* Add spacing between form groups */
+}
 h2 {
     text-align: center;
     margin-bottom: 20px;
