--- a/BingoWebApp/BingoWebApp/wwwroot/css/Index.css
+++ b/BingoWebApp/BingoWebApp/wwwroot/css/Index.css
@@ -51,3 +51,56 @@
     margin: 0 5px;
     cursor: pointer;
 }
+/*
+.dots-button {
+    cursor: pointer;
+    background-color: white;
+    border: none;
+    font-size: x-large;
+}
+
+.menu {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.menu a {
+        display: block;
+        padding: 10px;
+        text-decoration: none;
+        color: #333;
+}
+
+.side-menu {
+    display: none;
+    position: absolute;
+    top: 50px; 
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    z-index: 1;
+}
+
+    .side-menu button {
+        display: block;
+        width: 100%;
+        padding: 8px;
+        text-align: left;
+        border: none;
+        background-color: green;
+        cursor: pointer;
+        margin-bottom: 8px; 
+    }
+
+.user-actions i {
+    cursor: pointer;
+}
+
+
+.show-menu .side-menu {
+    display: block;
+}*/
